[tool.poetry]
name = "hctc"
version = "0.1.0"
description = ""
authors = ["Tyler Holewinski <tyler.holewinski@bryx.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
plexapi = "^4.13.2"
tqdm = "^4.64.1"
moviepy = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
